<resources>
<string name="address_caption">VNC Server</string>
<string name="address_caption_hint">VNC Server</string>
<string name="address_caption_hint_tunneled">VNC Server</string>
<string name="address_caption_ssh">SSH Server</string>
<string name="address_caption_ssh_hint">SSH Server</string>
<string name="ad_donate_text">Tap here to support the project with a small donation (and get rid of this dialog) by buying the pro version!</string>
<string name="ad_donate_text2">If you would like to support the project further, tap here to try and/or buy my other programs.</string>
<string name="alt_check">Alt</string>
<string name="app_name">bVNC Pro</string>
<string name="arrow_down">Down Arrow</string>
<string name="arrow_left">Left Arrow</string>
<string name="arrow_right">Right Arrow</string>
<string name="arrow_up">Up Arrow</string>
<string name="auto">Auto</string>
<string name="auto_x_caption">EXPERIMENTAL: bVNC can automatically discover existing and create new X sessions on UNIX systems (like NX). You need x11vnc to find, and Xvfb, Xvnc, or Xdummy to create sessions.</string>
<string name="auto_x_cancel">Cancel</string>
<string name="auto_x_confirm">Confirm</string>
<string name="auto_x_descript_geom">Remote Desktop Size (WxH)</string>
<string name="auto_x_descript_session">Remote Session Type</string>
<string name="auto_x_disabled">Disabled</string>
<string name="auto_x_disabled_selection">AutoX Disabled</string>
<string name="auto_x_enabled">Enabled</string>
<string name="auto_x_find">Only Find, Don\'t Create</string>
<string name="auto_x_find_login">Find X Login (needs sudo)</string>
<string-array name="auto_x_geometry">
    <item>@string/auto_x_geom_native</item>
    <item>@string/auto_x_geom_custom</item>
</string-array>
<string name="auto_x_geom_native">Native</string>
<string name="auto_x_geom_custom">Custom</string>
<string name="auto_x_title">Configure AutoX</string>
<string-array name="auto_x_session">
    <item>@string/auto_x_session_auto</item>
    <item>@string/auto_x_session_custom</item>
    <item>@string/auto_x_session_kde</item>
    <item>@string/auto_x_session_unity</item>
    <item>@string/auto_x_session_unity_2d</item>
    <item>@string/auto_x_session_xfce</item>
    <item>@string/auto_x_session_gnome</item>
    <item>@string/auto_x_session_gnome_cl</item>
    <item>@string/auto_x_session_trinity</item>
    <item>@string/auto_x_session_mate</item>
</string-array>
<string name="auto_x_session_auto">Auto</string>
<string name="auto_x_session_custom">Custom</string>
<string name="auto_x_session_kde">KDE</string>
<string name="auto_x_session_unity">Unity</string>
<string name="auto_x_session_unity_2d">Unity2D</string>
<string name="auto_x_session_xfce">Xfce</string>
<string name="auto_x_session_gnome">GNOME</string>
<string name="auto_x_session_gnome_cl">GNOME Classic</string>
<string name="auto_x_session_trinity">Trinity</string>
<string name="auto_x_session_mate">MATE</string>
<string-array name="auto_x_type">
    
    <item>@string/auto_x_disabled_selection</item>
    <item>@string/auto_x_xvfb</item>
    <item>@string/auto_x_xvnc</item>
    <item>@string/auto_x_xdummy</item>
    <item>@string/auto_x_find</item>
    <item>@string/auto_x_find_login</item>
</string-array>
<string name="auto_x_xdummy">Find or Create with Xdummy</string>
<string name="auto_x_xvfb">Find or Create with Xvfb</string>
<string name="auto_x_xvnc">Find or Create with Xvnc</string>
<string name="auto_x_unixpw">Use UNIX credentials instead of the built in security mechanism. User must be able to run /bin/su.</string>
<string name="auto_x_unix_auth">Authenticate using supplied SSH Username/Password automatically (to the black login screen).</string>
<string name="button_send_text">Send Text</string>
<string name="button_send_without_saving">Send Text/Don\'t Save It</string>
<string name="center_mouse">Mouse @</string>
<string name="close">Close</string>
<string name="color_format_caption">Color Mode</string>
<string name="color_mode">Color Mode</string>
<string name="connect_button">Connect</string>
<string name="connection_caption">Connection</string>
<string name="connection_type_caption">Conn. Type</string>
<string name="connection_type_rdp">RDP</string>
<string name="connection_type_rdp_over_ssh">RDP over SSH</string>
<string name="connection_type_spice">SPICE</string>
<string name="connection_type_spice_over_ssh">SPICE over SSH</string>
<string name="connection_type_vnc">Basic VNC</string>
<string name="connection_type_vnc_over_ssh">Secure VNC over SSH</string>
<string name="connection_type_ultravnc">UltraVNC</string>
<string name="connection_type_vnc_over_ssl">Secure VNC over AnonTLS</string>
<string name="connection_type_vnc_over_vencrypt">Secure VNC over VeNCrypt</string>
<string-array name="connection_type">
    <item>@string/connection_type_vnc</item>
    <item>@string/connection_type_vnc_over_ssh</item>
    <item>@string/connection_type_ultravnc</item>
    <item>@string/connection_type_vnc_over_ssl</item>
    <item>@string/connection_type_vnc_over_vencrypt</item>
</string-array>
<string name="control_check">Ctrl</string>
<string name="copy_list_button">Copy List</string>
<string name="ctrl_alt_del">Ctrl-Alt-Del</string>
<string name="delete_connection">Delete Connection</string>
<string name="delete_key">Delete Selected Key</string>
<string name="delete_key_list">Delete Key List</string>
<string name="dpad_as_arrows">Use D-Pad for arrows and D-Pad click for Ctrl.</string>
<string name="disconnect">Disconnect</string>
<string name="enable_sound">Enable Sound</string>
<string name="error_connection_type_not_supported">This connection type is not supported.</string>
<string name="error_no_user_hostname">Please enter at least a user and a hostname or IP address.</string>
<string name="error_vnc_authentication">VNC authentication failed! Check VNC password (and user if applicable).</string>
<string name="error_out_of_memory">Unable to allocate sufficient memory to draw remote screen. Try restarting the application, then restart your device. You can also try reducing the size of the remote desktop through the app settings.</string>
<string name="error_ovirt_unable_to_connect">Unable to connect or authenticate, please check server address, user, password, and cert authority and subject.</string>
<string name="error_spice_unable_to_connect">Unable to connect or authenticate, please check server address, password, and cert authority and subject.</string>
<string name="error_rdp_unable_to_connect">Could not connect to RDP server! Please ensure RDP Server setting is correct, the RDP server is turned on, RDP is enabled, and that the server is on the same network as this device.</string>
<string name="error_rdp_connection_failed">RDP Connection failed! Either network connectivity was interrupted, the RDP server was turned off or disabled, or your session was taken over.</string>
<string name="error_rdp_authentication_failed">RDP Authentication failed! Please check the RDP username and password and try again.</string>
<string name="error_ssh_unable_to_connect">Failed to connect to SSH Server. Please check network connectivity, and SSH Server address and port.</string>
<string name="error_ssh_hostkey_changed">ERROR! The server host key has changed. If this is intentional, please delete and recreate the connection. Otherwise, this may be a man in the middle attack. Not continuing.</string>
<string name="error_ssh_kbd_auth_method_unavail">The SSH server supports neither \"password\" nor \"keyboard-interactive\" auth methods. Please configure it to allow at least one of the two methods and try again.</string>
<string name="error_ssh_pubkey_auth_method_unavail">The SSH server does not support the \"publickey\" auth method, and we are trying to use a key-pair to authenticate. Please configure it to allow the publickey authentication and try again.</string>
<string name="error_ssh_pwd_auth_fail">Failed to authenticate to SSH server with a password. Please check your SSH username, and SSH password.</string>
<string name="error_ssh_key_auth_fail">Failed to authenticate to SSH server with a key-pair. Please check your SSH username, and ensure your public key is in the authorized_keys file on the remote side.</string>
<string name="error_ssh_x11vnc_no_port_failure">Could not obtain remote VNC port from x11vnc. Please ensure x11vnc is installed. To be sure, try running x11vnc by hand on the command-line.</string>
<string name="error_ssh_port_forwarding_failure">Could not set up the port forwarding for tunneling VNC traffic over SSH. Please ensure your SSH server is configured to allow port forwarding and try again.</string>
<string name="error_ssh_keypair_missing">SSH key-pair not generated yet! Please generate one and put (its public part) in authorized_keys on the SSH server.</string>
<string name="error_ssh_passphrase_but_keypair_unencrypted">Passphrase provided but key-pair not encrypted. Please delete passphrase.</string>
<string name="error_ssh_keypair_decryption_failure">Failed to decrypt key-pair. Please ensure you\'ve entered your passphrase correctly in the \'SSH Passphrase\' field on the main screen.</string>
<string name="error_ssh_could_not_exec_command">Could not execute remote command.</string>
<string name="error_ssh_could_not_send_sudo_pwd">Could not send sudo password.</string>
<string name="error_vnc_unable_to_connect">"Connection to VNC server failed with reason: "</string>
<string name="error_connection_interrupted">Connection interrupted.</string>
<string name="error_connection_failed">Connection failed.</string>
<string name="error_x509_could_not_generate_signature">Could not generate SHA1 or MD5 signature of certificate. No SHA1/MD5 algorithm found.</string>
<string name="error_x509_could_not_generate_encoding">Certificate encoding could not be generated.</string>
<string name="error_cert_does_not_match">ERROR: The saved x509 certificate does not match the current server certificate! This could be a man-in-the-middle attack. If you are aware of the key change, delete and recreate the connection.</string>
<string name="export_settings">Export</string>
<string name="export_settings_path"></string>
<string name="enter_text_title">Enter Text to Send</string>
<string name="enter_text">Send Text</string>
<string name="extra_keys_enable">Enable Extra Keys</string>
<string name="extra_keys_disable">Disable Extra Keys</string>
<string name="fit_to_screen">Fit to Screen</string>
<string name="import_export_settings">Import/Export Settings</string>
<string name="import_settings">Import</string>
<string name="import_settings_file_url"></string>
<string name="input_mode_help">Input Mode Help</string>
<string name="info">Info</string>
<string name="info_continue_connecting">"Continue connecting to: "</string>
<string name="info_cert_signatures">"The certificate information is: "</string>
<string name="info_ssh_initializing_hostkey">Attempting to initialize SSH HostKey.</string>
<string name="info_ssh_key_fingerprint">"The host key fingerprint is: "</string>
<string name="info_ssh_key_fingerprint_identical">\n\nYou can ensure it is identical to the known fingerprint of the server certificate to prevent a man-in-the-middle attack.</string>
<string name="info_cert_signatures_identical">\n\nYou can ensure the information matches the server certificate to prevent a man-in-the-middle attack.</string>
<string name="info_progress_dialog_connecting">Connecting...</string>
<string name="info_progress_dialog_establishing">Establishing handshake.\nPlease wait...</string>
<string name="info_progress_dialog_downloading">Downloading first frame.\nPlease wait...</string>
<string name="input_mode">Input Mode</string>
<string name="input_mode_drag_pan_zoom_mouse">Direct, Hold Pan</string>
<string name="input_mode_touchpad">Simulated Touchpad</string>
<string name="one_to_one">One to One</string>
<string name="scaling">Scaling</string>
<string name="scaling_zoomable">Zoomable</string>
</resources>